Update index.html (1)

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <!-- Right-sided navbar links -->
                 <div class="w3-right w3-hide-small">
                     <a href="#about" class="w3-bar-item w3-btn btn-about">ABOUT</a>
-                    <a href="#team" class="w3-bar-item w3-btn btn-team"><i class="fa fa-user"></i> TEAM</a>
                     <a href="#work" class="w3-bar-item w3-btn btn-work"><i class="fa fa-th"></i> WORK</a>
                     <a href="#pricing" class="w3-bar-item w3-btn btn-pricing"><i class="fa fa-usd"></i> PRICING</a>
+                    <a href="#team" class="w3-bar-item w3-btn btn-team"><i class="fa fa-user"></i> TEAM</a>
                     <a href="#contact" class="w3-bar-item w3-btn btn-contact"><i class="fa fa-envelope"></i> CONTACT</a>
                     <a href="#" class="w3-bar-item w3-btn btn-yoshi" style="border: 2px solid rgb(30,30,30);border-radius: 50px;" title="Coming soon!">Meet YOSHI!</a>
                 </div>
@@ -44,9 +44,9 @@
         <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
             <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">x</a>
             <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
-            <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">TEAM</a>
             <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">WORK</a>
             <a href="#pricing" onclick="w3_close()" class="w3-bar-item w3-button">PRICING</a>
+            <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">TEAM</a>
             <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
             <a href="#" onclick="w3_close()" class="w3-bar-item w3-button" title="Coming soon!">MEET YOSHI!</a>
         </nav>
@@ -90,35 +90,35 @@
         <!-- Sneak Peek Section -->
         <div class="w3-container w3-dark-gray" style="padding:128px 16px" id="work">
             <h3 class="w3-center w3-xxlarge">OUR WORK SNEAK PEEKS</h3>
-            <p class="w3-center">what we plan to do so <i>YOSHI!</i> can be your friends</p>
+            <p class="w3-center">take a look at our work we've done</p>
 
             <div class="w3-row-padding" style="margin-top:64px">
                 <div class=" w3-card w3-col l3 m6">
-                    <img src="./resources/images/sneak_logo.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="This is our logo">
+                    <img src="./resources/images/sneak_cover.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Our project plan cover">
                 </div>
                 <div class="w3-card w3-col l3 m6">
                     <img src="./resources/images/sneak_product overview.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Our product overviews">
                 </div>
                 <div class="w3-card w3-col l3 m6">
-                    <img src="./resources/images/tech_drone.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A drone">
+                    <img src="./resources/images/sneak_SO.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Opinions on our product">
                 </div>
                 <div class="w3-card w3-col l3 m6">
-                    <img src="./resources/images/tech_sound.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soundbox">
+                    <img src="./resources/images/sneak_pricing.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Our estimated pricing">
                 </div>
             </div>
 
             <div class="w3-row-padding w3-section">
                 <div class="w3-card w3-col l3 m6">
-                    <img src="./resources/images/tech_tablet.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tablet">
+                    <img src="./resources/images/sneak_code1.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sneak code 1">
                 </div>
                 <div class="w3-card w3-col l3 m6">
-                    <img src="./resources/images/tech_camera.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A camera">
+                    <img src="./resources/images/sneak_code2.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sneak code 2">
                 </div>
                 <div class="w3-card w3-col l3 m6">
-                    <img src="./resources/images/tech_typewriter.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A typewriter">
+                    <img src="./resources/images/sneak_code3.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sneak code 3">
                 </div>
                 <div class="w3-card w3-col l3 m6">
-                    <img src="./resources/images/tech_tableturner.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tableturner">
+                    <img src="./resources/images/sneak_code4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sneak code 4">
                 </div>
             </div>
         </div>
@@ -179,7 +179,7 @@
             <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
                 <div class="w3-quarter l3 m6 w3-margin-bottom">
                     <div class="w3-card w3-rounded w3-white">
-                        <img class="w3-rounded" src="./resources/images/team2.jpg" alt="John" style="width:100%">
+                        <img class="w3-rounded" src="./resources/images/team2.jpg" alt="Shereen Sianturi" style="width:100%">
                         <div class="w3-container">
                             <h3>Shereen Sianturi</h3>
                             <p class="w3-opacity">CEO</p>
@@ -190,7 +190,7 @@
                 </div>
                 <div class="w3-quarter l3 m6 w3-margin-bottom">
                     <div class="w3-card w3-rounded w3-white">
-                        <img class="w3-rounded" src="./resources/images/team2.jpg" alt="John" style="width:100%">
+                        <img class="w3-rounded" src="./resources/images/team2.jpg" alt="Yolanda Tamba" style="width:100%">
                         <div class="w3-container">
                             <h3>Yolanda Tamba</h3>
                             <p class="w3-opacity">Manager</p>
@@ -201,18 +201,18 @@
                 </div>
                 <div class="w3-quarter l3 m6 w3-margin-bottom">
                     <div class="w3-card w3-rounded w3-white">
-                        <img class="w3-rounded" src="./resources/images/rijal.png" alt="Rijal Gabriel" style="width:100%">
+                        <img class="w3-rounded" src="./resources/images/rijal.png" alt="Rijal Gabriel" style="width:100%;">
                         <div class="w3-container">
                             <h3>Rijal Gabriel</h3>
                             <p class="w3-opacity">IT Developer</p>
                             <p>A student from SMA Unggul Del. Class XI PMIA 1.</p><br>
-                            <p><i>"The more you understressed, the more creative you've become."</i></p><br>
+                            <p><i>"The more you understressed, the more creative you'll become."</i></p><br>
                         </div>
                     </div>
                 </div>
                 <div class="w3-quarter l3 m6 w3-margin-bottom">
                     <div class="w3-card w3-rounded w3-white">
-                        <img class="w3-rounded" src="./resources/images/team2.jpg" alt="John" style="width:100%">
+                        <img class="w3-rounded" src="./resources/images/team2.jpg" alt="Theresa Aruan" style="width:100%">
                         <div class="w3-container">
                             <h3>Theresa Aruan</h3>
                             <p class="w3-opacity">IT Developer</p>
@@ -223,29 +223,29 @@
                 </div>
                 <div class="w3-quarter l3 m6 w3-margin-bottom">
                     <div class="w3-card w3-rounded w3-white">
-                        <img class="w3-rounded" src="./resources/images/team2.jpg" alt="John" style="width:100%">
+                        <img class="w3-rounded" src="./resources/images/stiven.png" alt="Stiven Tampubolon" style="width:100%">
                         <div class="w3-container">
                             <h3>Stiven Tampubolon</h3>
                             <p class="w3-opacity">Marketing Dept.</p>
                             <p>A student from SMA Unggul Del. Class XI PMIA 1.</p><br>
-                            <p><i>"Put your life saying here....................................."</i></p><br>
+                            <p><i>"We are an offer you can't refuse."</i></p><br><br>
                         </div>
                     </div>
                 </div>
                 <div class="w3-quarter l3 m6 w3-margin-bottom">
                     <div class="w3-card w3-rounded w3-white">
-                        <img class="w3-rounded" src="./resources/images/team2.jpg" alt="John" style="width:100%">
+                        <img class="w3-rounded" src="./resources/images/gerrard.png" alt="Gerrard Girsang" style="width:100%">
                         <div class="w3-container">
                             <h3>Gerrard Girsang</h3>
                             <p class="w3-opacity">Marketing Dept.</p>
                             <p>A student from SMA Unggul Del. Class XI PMIA 1.</p><br>
-                            <p><i>"Put your life saying here....................................."</i></p><br>
+                            <p><i>"Put in the work, put in the hours, and take what's ours."</i></p><br>
                         </div>
                     </div>
                 </div>
                 <div class="w3-quarter l3 m6 w3-margin-bottom">
                     <div class="w3-card w3-rounded w3-white">
-                        <img class="w3-rounded" src="./resources/images/team1.jpg" alt="Jane" style="width:100%">
+                        <img class="w3-rounded" src="./resources/images/team1.jpg" alt="Pilemon Barimbing" style="width:100%">
                         <div class="w3-container">
                             <h3>Pilemon Barimbing</h3>
                             <p class="w3-opacity">Finance Dept.</p>
@@ -256,7 +256,7 @@
                 </div>
                 <div class="w3-quarter l3 m6 w3-margin-bottom">
                     <div class="w3-card w3-rounded w3-white">
-                        <img class="w3-rounded" src="./resources/images/team3.jpg" alt="Mike" style="width:100%">
+                        <img class="w3-rounded" src="./resources/images/team3.jpg" alt="Steven Hosea" style="width:100%">
                         <div class="w3-container">
                             <h3>Steven Hosea</h3>
                             <p class="w3-opacity">Finance Dept.</p>
@@ -292,13 +292,13 @@
 
         <!-- Footer -->
         <footer class="w3-center w3-black w3-padding-64">
-        <a href="#home" class="w3-button w3-light-grey w3-round-xxlarge"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-        <div class="w3-xlarge w3-section">
-            <a href="https://www.youtube.com/channel/UCjWBqKjCgfopOAfqv8xUc9g/featured" target="_blank"><i class="fa fa-youtube-play w3-hover-opacity" title="See us on Youtube"></i></a>
-        </div><br>
-        <hr>
-        <p>powered by: <a class="w3-hover-text-green" href="https://www.w3schools.com/w3css/default.asp">W3.CSS</a> & <a class="w3-hover-text-red" href="https://fonts.google.com/">Google Fonts</a> & <a class="w3-hover-text-indigo" href="https://formsubmit.co/" target="_blank">Formsubmit</a></p>
-        <p>&#169; 2021 YOSHI!</p>
+            <a href="#home" class="w3-button w3-light-grey w3-round-xxlarge"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+            <div class="w3-xlarge w3-section">
+                <a href="https://www.youtube.com/channel/UCjWBqKjCgfopOAfqv8xUc9g/featured" target="_blank"><i class="fa fa-youtube-play w3-hover-opacity" title="See us on Youtube"></i></a>
+            </div>
+            <br><hr>
+            <p>powered by: <a class="w3-hover-text-green" href="https://www.w3schools.com/w3css/default.asp">W3.CSS</a> & <a class="w3-hover-text-red" href="https://fonts.google.com/">Google Fonts</a> & <a class="w3-hover-text-indigo" href="https://formsubmit.co/" target="_blank">Formsubmit</a></p>
+            <p>&#169; 2021 YOSHI!</p><br>
         </footer>
         
         <script>
