--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                             <h3>Shereen Sianturi</h3>
                             <p class="w3-opacity">CEO</p>
                             <p>A student from SMA Unggul Del. Class XI PMIA 1.</p><br>
-                            <p><i>"Put your life saying here....................................."</i></p><br>
+                            <p><i>"Put your life saying here..............................................."</i></p><br>
                         </div>
                     </div>
                 </div>
@@ -195,7 +195,7 @@
                             <h3>Yolanda Tamba</h3>
                             <p class="w3-opacity">Manager</p>
                             <p>A student from SMA Unggul Del. Class XI PMIA 1.</p><br>
-                            <p><i>"Put your life saying here....................................."</i></p><br>
+                            <p><i>"Put your life saying here..............................................."</i></p><br>
                         </div>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
                             <h3>Theresa Aruan</h3>
                             <p class="w3-opacity">IT Developer</p>
                             <p>A student from SMA Unggul Del. Class XI PMIA 1.</p><br>
-                            <p><i>"Put your life saying here....................................."</i></p><br>
+                            <p><i>"Put your life saying here..............................................."</i></p><br>
                         </div>
                     </div>
                 </div>
@@ -250,7 +250,7 @@
                             <h3>Pilemon Barimbing</h3>
                             <p class="w3-opacity">Finance Dept.</p>
                             <p>A student from SMA Unggul Del. Class XI PMIA 1.</p><br>
-                            <p><i>"Put your life saying here....................................."</i></p><br>
+                            <p><i>"Put your life saying here..............................................."</i></p><br>
                         </div>
                     </div>
                 </div>
@@ -261,7 +261,7 @@
                             <h3>Steven Hosea</h3>
                             <p class="w3-opacity">Finance Dept.</p>
                             <p>A student from SMA Unggul Del. Class XI PMIA 1.</p><br>
-                            <p><i>"Put your life saying here....................................."</i></p><br>
+                            <p><i>"Put your life saying here..............................................."</i></p><br>
                         </div>
                     </div>
                 </div>    
