--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
         </div>
 
         <!-- Team Section -->
-        <div class="w3-container w3-light-gray" style="padding:128px 16px;" id="team">
+        <div class="w3-container w3-light-gray w3-text-dark-gray" style="padding:128px 16px;" id="team">
             <h3 class="w3-center w3-xxlarge">MEET OUR TEAM</h3>
             <p class="w3-center">they are <i>YOSHI!</i>'s family, who will always support you</p>
-            <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
+            <div class="w3-row-padding" style="margin-top:64px">
                 <div class="w3-quarter l3 m6 w3-margin-bottom">
                     <div class="w3-card w3-rounded w3-white">
                         <img class="w3-rounded" src="./resources/images/team2.jpg" alt="Shereen Sianturi" style="width:100%">
@@ -212,12 +212,12 @@
                 </div>
                 <div class="w3-quarter l3 m6 w3-margin-bottom">
                     <div class="w3-card w3-rounded w3-white">
-                        <img class="w3-rounded" src="./resources/images/team2.jpg" alt="Theresa Aruan" style="width:100%">
+                        <img class="w3-rounded" src="./resources/images/caca.png" alt="Theresa Aruan" style="width:100%;filter: grayscale(25%);">
                         <div class="w3-container">
                             <h3>Theresa Aruan</h3>
                             <p class="w3-opacity">IT Developer</p>
                             <p>A student from SMA Unggul Del. Class XI PMIA 1.</p><br>
-                            <p><i>"Put your life saying here"</i></p><br><br>
+                            <p><i>"The only true wisdom is in knowing you know nothing."</i></p><br>
                         </div>
                     </div>
                 </div>
